# adventofcode2022

./: Cargo.toml  README.md
day01a/: Cargo.toml  main.rs
day01b/src/: main.rs
day02/src/: main.rs
day03/: go.mod  main.go
day04/src/: main.rs
day05/src/: main.rs
day06/src/: main.rs
day07/: file.go  go.mod  main.go
day08/: go.mod  main.go
day08/src/: main.rs
day09/: Cargo.toml
day09/src/: main.rs
